fixed album covers

--- a/client/src/components/Channel/Container/Photos/Styling/albumStyling.scss
+++ b/client/src/components/Channel/Container/Photos/Styling/albumStyling.scss
@@ -1,18 +1,19 @@
 .albumCover {
   width: 25%;
-  padding: 10px;
-  height: 200px;
+  padding: 1px;
+  max-height: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .coverPhoto {
   max-width: 100%;
   overflow: hidden;
   max-height: 80%;
+  display: flex;
+  justify-content: center;
   
-}
-
-.coverPhoto img {
-  width: 100%
 }
 
 #album-box {
